Ignore the position

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@
 .idea/modules.xml
 .idea/vcs.xml
 .idea/codeStyles/Project.xml
+starter_code/matlab_spice_parser/netlist/netlist_t1.sp
+starter_code/matlab_spice_parser/netlist/rlc.sp
